--- a/hfsrb-ui/docker-compose.db.yml
+++ b/hfsrb-ui/docker-compose.db.yml
@@ -1,7 +1,7 @@
 services:
   db:
     image: postgres:15-alpine
-    container_name: hfsrb_db
+    container_name: hfsrb-db
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
@@ -18,7 +18,7 @@ services:
 
   adminer:
     image: adminer:4
-    container_name: hfsrb_adminer
+    container_name: hfsrb-adminer
     depends_on:
       - db
     environment:
@@ -28,3 +28,4 @@ services:
 
 volumes:
   db_data:
+
