--- a/hfsrb-ui/package.json
+++ b/hfsrb-ui/package.json
@@ -26,9 +26,11 @@
   },
   "dependencies": {
     "@tanstack/react-table": "^8.21.3",
+    "@sparticuz/chromium": "^119.0.2",
     "chart.js": "^4.5.0",
     "drizzle-orm": "^0.44.5",
     "next": "14.2.32",
+    "puppeteer-core": "^22.13.1",
     "pg": "^8.16.3",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
@@ -51,7 +53,6 @@
     "tailwindcss": "^3.4.1",
     "tsx": "^4.20.5",
     "typescript": "^5",
-    "typescript-eslint": "^8.43.0",
-    "playwright": "^1.47.2"
+    "typescript-eslint": "^8.43.0"
   }
 }
