--- a/hfsrb-ui/package.json
+++ b/hfsrb-ui/package.json
@@ -43,6 +43,7 @@
     "@eslint/js": "^9.35.0",
     "@next/eslint-plugin-next": "^15.5.2",
     "@types/node": "^20.19.13",
+    "@types/pg": "^8.15.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "dotenv-cli": "^10.0.0",
